# GBM

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/synthetic/: make_synthetic_scenario.py
docs/: getting_started.md  paper_data_availability.tex  reproducibility.md
examples/: 01_quickstart_synthetic.ipynb  02_gbm_vs_baselines.ipynb  03_3d_gbm_quickstart.ipynb  04_3d_baselines_comparison.ipynb  05_3d_full_baseline_sweep.ipynb  06_3d_runtime_benchmark.ipynb  07_kmedoids_3d_demo.ipynb  08_3d_sensitivity.ipynb  README.md  quickstart.py
experiments/: README.md
experiments/2d_co2/: README.md  run.sh  seeds.txt
experiments/3d/: README.md  run.sh
experiments/ablation/: README.md
experiments/deployable_layouts/: README.md  run.py  run.sh  seeds.txt
experiments/deprecated/: README.md
experiments/hpo_sensitivity/: README.md  sweep.py
experiments/nh3/: README.md  run.sh
experiments/robustness/: README.md  run.py
experiments/runtime_benchmark/: README.md  run.py
experiments/statistical_analysis/: README.md  compute.py
src/gbm/: __init__.py  cli.py  data.py  utils.py
src/gbm/baselines/: PSO.py  __init__.py  genetic.py  greedy.py  kmedoids.py  monte_carlo.py  random.py  simulated_annealing.py  uniform.py
src/gbm/core/: __init__.py  mapper_2d.py  mapper_3d.py
tests/: test_gbm_core.py
