[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm"
version = "0.1.0.dev0"
description = "Gradient-Based Mapper (GBM) — topology-constrained sensor placement for scalar fields in ventilated buildings"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anh-Duy Pham", email = "anh-duy.pham@uni-wuerzburg.de"},
    {name = "Sabrina Hempel"},
    {name = "Ali Alaei"},
    {name = "Abhijith Srinivas Bidaralli"},
    {name = "David Janke"},
    {name = "Thomas Amon"},
    {name = "Martin Atzmueller"},
    {name = "Tim Römer"},
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",          # Hard dependency (CPU/CUDA wheels documented)
    "tqdm>=4.65",
    "scikit-learn>=1.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7", "scipy>=1.11"]
hpo = ["smac>=2.0", "ConfigSpace>=0.7"]
dev = ["ruff>=0.4", "pre-commit>=3.5"]

[project.scripts]
gbm = "gbm.cli:main"   # lightweight CLI (intentionally minimal)

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gbm" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]


